@@ -59,6 +59,7 @@
 - fix remount deadlock.
 - fix umount recovery of busy direct mount.
 - fix offset mount point directory removal.
+- fix remount of multi mount.
 
 28/06/2011 autofs-5.0.6
 -----------------------
